src/ui/snapshots/terracotta__ui__preview__tests__preview_80x24_normal.snap
---
source: src/ui/preview.rs
expression: buffer_text(&buffer)
---

 Terracotta | infra/prod

 ┌Plan────────────────────────────────────────────────────────────────────────┐
 │Terraform will perform the following actions:                              ↑│
 │                                                                           █│
 │  # terraform_data.api will be updated in-place                            █│
 │  ~ resource "terraform_data" "api" {                                      █│
 │      id       = "api-20260920"                                            █│
 │      ~ input  = "before" -> "after"                                       ││
 │      # (4 unchanged attributes hidden)                                    ││
 │    }                                                                      ││
 │                                                                           ││
 │  # terraform_data.worker must be replaced                                 ││
 │-/+ resource "terraform_data" "worker" {                                   ││
 │      ~ input = "worker-before" -> "worker-after" # forces replacement     ││
 │      - old_checksum = "sha256:0123456789abcdef0123456789abcdef0123456789ab││
 │      + new_checksum = (known after apply)                                 ││
 │    }                                                                      ││
 │                                                                           ││
 │←████████████████████████████████──────────────────────────────────────────→│
 └────────────────────────────────────────────────────────────────────────────┘
 ↑/↓/←/→ scroll | / search | a apply | y yank | q quit
